# developer_tools

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  build.sh
backend/: CMakeLists.txt  Dockerfile  README.md  build.sh
backend/ci/local/: build.sh
backend/cmake/modules/: ConfigureCUDA.cmake
backend/conda/environments/: triton_backend.yml  triton_backend_test.yml
backend/cpp/: CMakeLists.txt
backend/cpp/cmake/modules/: ConfigureCUDA.cmake
backend/cpp/include/: triton_backend.hpp
backend/cpp/include/rapids_triton/: exceptions.hpp
backend/cpp/include/rapids_triton/cpu_only/: cuda_runtime_replacement.hpp
backend/cpp/include/rapids_triton/memory/: resource.hpp
backend/cpp/include/rapids_triton/triton/: device.hpp
backend/cpp/include/triton_backend/: build_control.hpp  exceptions.hpp
backend/cpp/include/triton_backend/batch/: batch.hpp
backend/cpp/include/triton_backend/cpu_only/: cuda_runtime_replacement.hpp
backend/cpp/include/triton_backend/memory/: buffer.hpp  resource.hpp  types.hpp
backend/cpp/include/triton_backend/model/: model.hpp  shared_state.hpp
backend/cpp/include/triton_backend/tensor/: dtype.hpp  tensor.hpp
backend/cpp/include/triton_backend/triton/: backend.hpp  config.hpp  deployment.hpp  device.hpp  input.hpp  logging.hpp  model.hpp  model_instance.hpp  model_instance_state.hpp  model_state.hpp  output.hpp  requests.hpp  responses.hpp  statistics.hpp  triton_memory_resource.hpp
backend/cpp/include/triton_backend/utils/: const_agnostic.hpp  device_setter.hpp  narrow.hpp
backend/cpp/src/: CMakeLists.txt  api.cc  model.h  names.h  shared_state.h
backend/cpp/test/: CMakeLists.txt  build_control.cpp  exceptions.cpp  test.cpp
backend/cpp/test/batch/: batch.cpp
backend/cpp/test/memory/: buffer.cpp  resource.cpp  types.cpp
backend/cpp/test/memory/detail/: copy.cpp  owned_device_buffer.cpp
backend/cpp/test/tensor/: dtype.cpp  tensor.cpp
backend/cpp/test/triton/: backend.cpp  config.cpp  deployment.cpp  device.cpp  input.cpp  logging.cpp  model.cpp  model_instance.cpp  requests.cpp  responses.cpp  statistics.cpp
backend/cpp/test/triton/api/: execute.cpp  initialize.cpp  (+4 more)
backend/cpp/test/utils/: const_agnostic.cpp  narrow.cpp
backend/include/: backend_tools.hpp  rapids_triton.hpp
backend/include/rapids_triton/memory/: buffer.hpp
backend/include/rapids_triton/model/: model.hpp
backend/include/rapids_triton/triton/: model.hpp  model_state.hpp  requests.hpp
backend/include/triton/developer_tools/: build_control.hpp  exceptions.hpp
backend/python/: setup.py
backend/python/rapids_triton/: __init__.py  exceptions.py  logging.py  testing.py
backend/python/rapids_triton/triton/: client.py  dtype.py  io.py  message.py  response.py
backend/qa/: run_tests.sh
backend/qa/L0_e2e/: test_model.py
backend/scripts/: run-clang-format.py
backend/src/: CMakeLists.txt  api.cc  model.h  names.h  shared_state.h
backend/test/: CMakeLists.txt  build_control.cpp  exceptions.cpp  test.cpp
backend/test/batch/: batch.cpp
backend/test/memory/: buffer.cpp  resource.cpp  types.cpp
backend/test/memory/detail/: copy.cpp  owned_device_buffer.cpp
backend/test/tensor/: dtype.cpp  tensor.cpp
backend/test/triton/: backend.cpp  config.cpp  deployment.cpp  device.cpp  input.cpp  logging.cpp  model.cpp  model_instance.cpp  requests.cpp  responses.cpp  statistics.cpp
backend/test/triton/api/: execute.cpp  initialize.cpp  instance_finalize.cpp  instance_initialize.cpp  model_finalize.cpp  model_initialize.cpp
backend/test/utils/: const_agnostic.cpp  narrow.cpp
cpp/: CMakeLists.txt
cpp/cmake/modules/: ConfigureCUDA.cmake
cpp/include/: rapids_triton.hpp
cpp/include/rapids_triton/: build_control.hpp  exceptions.hpp
cpp/include/rapids_triton/batch/: batch.hpp
cpp/include/rapids_triton/cpu_only/: cuda_runtime_replacement.hpp
cpp/include/rapids_triton/memory/: buffer.hpp  resource.hpp  types.hpp
cpp/include/rapids_triton/model/: model.hpp  shared_state.hpp
cpp/include/rapids_triton/tensor/: dtype.hpp  tensor.hpp
cpp/include/rapids_triton/triton/: backend.hpp  config.hpp  deployment.hpp  input.hpp  logging.hpp  model.hpp  model_instance.hpp  model_instance_state.hpp  model_state.hpp  output.hpp  requests.hpp  responses.hpp  statistics.hpp  triton_memory_resource.hpp
cpp/include/rapids_triton/utils/: const_agnostic.hpp  device_setter.hpp  narrow.hpp
cpp/src/: CMakeLists.txt  api.cc  model.h  shared_state.h
cpp/src/impl/: shared_state.h
cpp/src/interface/: api.cc  model_instance_state.h  model_state.h
cpp/test/: CMakeLists.txt  build_control.cpp  exceptions.cpp  test.cpp
cpp/test/memory/: buffer.cpp  resource.cpp
cpp/test/memory/detail/: allocate.cpp  copy.cpp  resource.cpp
cpp/test/tensor/: dtype.cpp  tensor.cpp
cpp/test/triton/: backend.cpp  config.cpp  deployment.cpp  device.cpp  logging.cpp  model.cpp  model_instance.cpp  requests.cpp
cpp/test/triton/api/: execute.cpp  initialize.cpp  model_initialize.cpp
cpp/test/utils/: const_agnostic.cpp  narrow.cpp
examples/backend_linear/: CMakeLists.txt  Dockerfile  README.md
examples/backend_linear/conda/environments/: rapids_triton_dev_cuda11.4.yml
examples/backend_linear/src/: api.cc  gpu_infer.cu  gpu_infer.h  model.h  names.h  shared_state.h
server/: CMakeLists.txt  README.md  install_dependencies_and_build.sh
server/cmake/: TritonDeveloperToolsServerConfig.cmake.in  TritonServerWrapperConfig.cmake.in  server_wrapper.ldscript
server/examples/: CMakeLists.txt  addsub_string_async_infer.cc  preallocated_resnet50_onnx_infer.cc  raw_onnx_model_infer.cc  simple_addsub_async_infer.cc  square_async_infer.cc
server/examples/models/simple/: config.pbtxt
server/include/: server_api.h  server_wrapper.h
server/include/triton/developer_tools/: common.h  generic_server_wrapper.h  server_wrapper.h
server/src/: common.cc  common.h  infer_requested_output.h  server_api.cc  server_wrapper.cc  tracer.cc  tracer.h
server/test/: CMakeLists.txt  wrapper_test.cc
(+148 files in other folders)
